# smart-commit

./: .gitignore  LICENSE  README.md  pyproject.toml  pythoncode.py  requirements.txt  setup.cfg  setup.py
smart_commitfromtoml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
smart_commits.egg-info/: PKG-INFO  SOURCES.txt
smartcommit/: smartcommit.py
smartcommit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
smartcommits.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: smartcommit.py
